# orders/src/main/java/microfood/orders/controllers/OrdersController.java
@@ -1,10 +1,9 @@
 package microfood.orders.controllers;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
-import org.apache.commons.lang.NotImplementedException;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -15,42 +14,46 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
-import microfood.orders.OrderStatusEnum;
-import microfood.orders.dtos.DeliveryAddressDTO;
 import microfood.orders.dtos.OrderDTO;
-import microfood.orders.dtos.OrderItemDTO;
+import microfood.orders.exceptions.OrderNotFoundException;
+import microfood.orders.exceptions.OrdersCannotCancelException;
+import microfood.orders.services.OrderService;
 
 @RestController
 @RequestMapping("/orders")
 public class OrdersController {
 
+    private final OrderService orderService;
+
+    @Autowired
+    public OrdersController(OrderService orderService) {
+        this.orderService = orderService;
+    }
+
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
     public OrderDTO createOrder(@RequestBody OrderDTO orderDTO) {
-        throw new NotImplementedException();
+        return orderService.createOrder(orderDTO);
     }
 
     @GetMapping("/{orderId}")
-    public OrderDTO getOrderById(@PathVariable UUID orderId) {
-        List<OrderItemDTO> items = Collections.singletonList(new OrderItemDTO(UUID.randomUUID(), "Cheeseburger", 1.75, 1));
-        DeliveryAddressDTO address = new DeliveryAddressDTO("Some address");
-        return new OrderDTO(UUID.randomUUID(), OrderStatusEnum.REQUESTED, "userId",
-                UUID.randomUUID(), "Some notes", items, address);
+    public OrderDTO getOrderById(@PathVariable UUID orderId) throws OrderNotFoundException {
+        return orderService.getOrderById(orderId);
     }
 
     @DeleteMapping("/{orderId}")
-    public void cancelOrder(@PathVariable UUID orderId) {
-        throw new NotImplementedException();
+    public void cancelOrder(@PathVariable UUID orderId) throws OrdersCannotCancelException, OrderNotFoundException {
+        orderService.cancelOrder(orderId);
     }
 
     @GetMapping("/user/{userId}")
     public List<OrderDTO> getOrdersByUser(@PathVariable String userId) {
-        throw new NotImplementedException();
+        return orderService.getOrdersByUser(userId);
     }
 
     @GetMapping("/user/{restaurantId}")
-    public List<OrderDTO> getOrdersByRestaurants(@PathVariable String restaurantId) {
-        throw new NotImplementedException();
+    public List<OrderDTO> getOrdersByRestaurants(@PathVariable UUID restaurantId) {
+        return orderService.getOrdersByRestaurantId(restaurantId);
     }
 
 
