# orders/src/main/java/microfood/orders/dtos/OrderDTO.java
@@ -1,14 +1,17 @@
 package microfood.orders.dtos;
 
+import java.util.Date;
 import java.util.List;
 import java.util.UUID;
 
 import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.NoArgsConstructor;
 import microfood.orders.OrderStatusEnum;
 
 @Data
 @AllArgsConstructor
+@NoArgsConstructor
 public class OrderDTO {
     private UUID orderId;
     private OrderStatusEnum orderStatus;
@@ -16,5 +19,6 @@ public class OrderDTO {
     private UUID restaurantId;
     private String notes;
     private List<OrderItemDTO> orderItems;
-    private DeliveryAddressDTO deliveryAddress;
+    private String deliveryAddress;
+    private Date createdOn;
 }
